--- a/ST/STM32F103x_app/Project/Objects/STM32F103X_BOOT.build_log.htm
+++ b/ST/STM32F103x_app/Project/Objects/STM32F103X_BOOT.build_log.htm
@@ -21,25 +21,20 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.1.0.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-E:\BootLaber\MCU\ST\STM32F103C8T6_app\Project\f103xx.uvprojx
+E:\BootLaber\MCU\ST\STM32F103x_app\Project\f103xx.uvprojx
 Project File Date:  08/18/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'E:\keil5\ARM\ARMCC\Bin'
 Build target 'STM32F103X_BOOT'
-compiling main.c...
-compiling system_stm32f10x.c...
-linking...
-Program Size: Code=672 RO-data=320 RW-data=0 ZI-data=1024  
-FromELF: creating hex file...
-After Build - User command #1: fromelf --bin -o "E:\BootLaber\MCU\ST\STM32F103C8T6_app\Project\Objects\STM32F103X_BOOT.bin" "E:\BootLaber\MCU\ST\STM32F103C8T6_app\Project\Objects\STM32F103X_BOOT.axf
+After Build - User command #1: fromelf --bin -o "E:\BootLaber\MCU\ST\STM32F103x_app\Project\Objects\STM32F103X_BOOT.bin" "E:\BootLaber\MCU\ST\STM32F103x_app\Project\Objects\STM32F103X_BOOT.axf
 After Build - User command #2: python ..\output\output.py
-E:\BootLaber\MCU\ST\STM32F103C8T6_app\Project
-E:\BootLaber\MCU\ST\STM32F103C8T6_app\output\output.py
-E:\BootLaber\MCU\ST\STM32F103C8T6_app\Project\Objects
-将文件STM32F103X_BOOT.axf复制到E:\BootLaber\MCU\ST\STM32F103C8T6_app\output下
-将文件STM32F103X_BOOT.bin复制到E:\BootLaber\MCU\ST\STM32F103C8T6_app\output下
-将文件STM32F103X_BOOT.hex复制到E:\BootLaber\MCU\ST\STM32F103C8T6_app\output下
+E:\BootLaber\MCU\ST\STM32F103x_app\Project
+E:\BootLaber\MCU\ST\STM32F103x_app\output\output.py
+E:\BootLaber\MCU\ST\STM32F103x_app\Project\Objects
+将文件STM32F103X_BOOT.axf复制到E:\BootLaber\MCU\ST\STM32F103x_app\output下
+将文件STM32F103X_BOOT.bin复制到E:\BootLaber\MCU\ST\STM32F103x_app\output下
+将文件STM32F103X_BOOT.hex复制到E:\BootLaber\MCU\ST\STM32F103x_app\output下
 ".\Objects\STM32F103X_BOOT.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -53,7 +48,7 @@ Package Vendor: Keil
   E:/keil5/PACK/Keil/STM32F1xx_DFP/1.0.5/Device/Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
