--- a/project/Objects/BootLader.build_log.htm
+++ b/project/Objects/BootLader.build_log.htm
@@ -17,20 +17,19 @@ Library Manager: ArmAr.exe V5.06 update 6 (build 750)
 Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
 CPU DLL:         SARMCM3.DLL V5.38.0.0
 Dialog DLL:      DCM.DLL V1.17.5.0
-Target DLL:      UL2CM3.DLL V1.164.8.0
+Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.1.0.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 E:\BootLaber\MCU\project\BootLader.uvprojx
-Project File Date:  11/23/2024
+Project File Date:  11/25/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'E:\keil5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling stm32f10x_fmc.c...
-compiling bootLoader.c...
+compiling stm32f10x_mid.c...
 linking...
-Program Size: Code=376 RO-data=320 RW-data=0 ZI-data=1024  
+Program Size: Code=1588 RO-data=336 RW-data=20 ZI-data=1028  
 ".\Objects\BootLader.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
