--- a/project/Objects/BootLader.build_log.htm
+++ b/project/Objects/BootLader.build_log.htm
@@ -22,14 +22,14 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 E:\BootLaber\MCU\project\BootLader.uvprojx
-Project File Date:  11/25/2024
+Project File Date:  06/01/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'E:\keil5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling stm32f10x_mid.c...
+compiling bootLoader.c...
 linking...
-Program Size: Code=1588 RO-data=336 RW-data=20 ZI-data=1028  
+Program Size: Code=5248 RO-data=336 RW-data=24 ZI-data=1024  
 ".\Objects\BootLader.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
